# qbm-websocket

./: CMakeLists.txt  README.md  ws.cpp  ws.h
readme/: README.md  concepts.md  handshake.md  protocol.md  usage.md
tests/: CMakeLists.txt  test-client.cpp  test-robustness.cpp  test-security.cpp  test-session-websocket.cpp  test-session.cpp  test-stress.cpp
